k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    environment: staging
    project: cidades-esg
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    environment: production
    project: cidades-esg
