k8s/03-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cidades-esg-api-deployment
  namespace: production
  labels:
    app: cidades-esg-api
    tier: backend
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: cidades-esg-api
  template:
    metadata:
      labels:
        app: cidades-esg-api
        tier: backend
    spec:
      containers:
      - name: cidades-esg-api
        image: fiap-devops/cidades-esg-api:prod
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1024Mi"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 2
