k8s/04-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cidades-esg-api-service
  namespace: production
  labels:
    app: cidades-esg-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: cidades-esg-api
