k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cidades-esg-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
spec:
  rules:
  - host: api.cidadesesg.fiap.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cidades-esg-api-service
            port:
              number: 80
